--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -741,3 +741,14 @@
 .header-2mZ9Ov {
   background-color: transparent;
 }
+
+.modeConnected-3IsKId .name-23GUGE,
+.modeConnected-3IsKId:hover .name-23GUGE,
+.modeSelected-346R90 .name-23GUGE,
+.modeSelected-346R90:hover .name-23GUGE,
+.modeUnread-1qO3K1 .name-23GUGE,
+.modeUnread-1qO3K1:hover .name-23GUGE,
+.notInteractive-1X92pj.modeConnected-3IsKId .name-23GUGE,
+.notInteractive-1X92pj.modeSelected-346R90 .name-23GUGE {
+  color: var(--text-voice-channel-selected-text-color);
+}
