Update user popouts

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -781,3 +781,19 @@ html {
 .aboutMeSection---MkQa {
   background-color: transparent;
 }
+
+.bodyInnerWrapper-26fQXj {
+	background-color: transparent;
+}
+
+.headerTop-3vNv-a {
+	background-color: var(--small-user-popout-background-transparency);
+}
+
+.divider-ewBQKj {
+	background-color: transparent;
+}
+
+.footer-3UKYOU {
+	background-color: var(--small-user-popout-background-transparency);
+}
