Preliminary thread fixes

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -797,3 +797,11 @@ html {
 .footer-3UKYOU {
 	background-color: var(--small-user-popout-background-transparency);
 }
+
+.threadSidebar-1o3BTy {
+  background: transparent;
+}
+
+.container-3hZ-gs {
+  background-color: transparent;
+}
