Fix black line in user profile popup footer

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -796,6 +796,7 @@ html {
 
 .footer-3UKYOU {
   background-color: var(--small-user-popout-background-transparency);
+  margin-top: 0;
 }
 
 .threadSidebar-1o3BTy {
