fix: decouple User Profile popout
So the style from popout won't apply to the one in user profile

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -806,3 +806,7 @@ html {
 .callContainer-36WRfH {
   background: transparent;
 }
+
+.profileBannerPreview-3_l0Wd .headerTop-3vNv-a {
+  background-color: rgb(0, 0, 0, 0);
+}
