Few UI fixes in User Profile section in User Settings (#170)
* fix: disappearing divider line

Make it appear again in User Settings > User Profile

* fix: decouple User Profile popout

So the style from popout won't apply to the one in user profile

* Update naat.v3.css

Co-authored-by: Chris Bockover <cbock1337@gmail.com>

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -790,10 +790,6 @@ html {
   background-color: var(--small-user-popout-background-transparency);
 }
 
-.divider-ewBQKj {
-  background-color: transparent;
-}
-
 .footer-3UKYOU {
   background-color: var(--small-user-popout-background-transparency);
   margin-top: 0;
@@ -809,4 +805,8 @@ html {
 
 .callContainer-36WRfH {
   background: transparent;
+}
+
+.profileBannerPreview-3_l0Wd .headerTop-3vNv-a {
+  background-color: rgb(0, 0, 0, 0);
 }
