--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -810,3 +810,11 @@ html {
 .profileBannerPreview-3_l0Wd .headerTop-3vNv-a {
   background-color: rgb(0, 0, 0, 0);
 }
+
+.listItem-1hlISG {
+	width: initial;
+}
+
+.pill-1Z5PKm .item-2hkk8m {
+  opacity: 0 !important;
+}
