--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -3,15 +3,19 @@
   background-size: cover;
 }
 
-.tutorialContainer-2sGCg9
-  .listItem-GuPuDH
-  .listItemWrapper-KhRmzM
-  .wrapper-1BJsBx {
+.tutorialContainer-2sGCg9 .wrapper-25eVIn .childWrapper-anI2G9 {
   background: var(--home-icon-image) !important;
   background-position: var(--home-icon-image-position) !important;
   background-repeat: no-repeat !important;
   background-size: var(--home-icon-image-zoom) !important;
   border-radius: 100%;
+}
+
+.tutorialContainer-2sGCg9
+  .wrapper-25eVIn
+  .childWrapper-anI2G9
+  .homeIcon-FuNwkv {
+  visibility: hidden;
 }
 
 .tutorialContainer-2sGCg9
@@ -812,7 +816,7 @@ html {
 }
 
 .listItem-1hlISG {
-	width: initial;
+  width: initial;
 }
 
 .pill-1Z5PKm .item-2hkk8m {
