--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -240,7 +240,7 @@
   top: -2px;
 }
 
-.wrapper-3NnKdC .scroller-1Bvpku .guildSeparator-33mFX6 {
+.wrapper-3NnKdC .scroller-1Bvpku .guildSeparator-EOYZLM {
   position: relative;
   margin-top: 10px;
   width: 80px;
