--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -827,3 +827,7 @@ html {
 .theme-dark .selected-1Tbx07 {
   background-color: rgba(200, 200, 200, 0.15);
 }
+
+.animatorLeft-1EQxU0.translate-2dAEQ6.didRender-33z1u8 .emojiPicker-3PwZFl {
+  background-color: var(--emoji-menu-background-color);
+}
