--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -828,6 +828,6 @@ html {
   background-color: rgba(200, 200, 200, 0.15);
 }
 
-.animatorLeft-1EQxU0.translate-2dAEQ6.didRender-33z1u8 .emojiPicker-3PwZFl {
+.translate-2dAEQ6.didRender-33z1u8 .emojiPicker-3PwZFl {
   background-color: var(--emoji-menu-background-color);
 }
