Update folder classes

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -702,11 +702,11 @@
 }
 
 /* Folder colors */
-.expandedFolderBackground-1cujaW {
+.expandedFolderBackground-3ZDF05 {
   background-color: var(--expanded-folder-background-color);
 }
 
-.folder-1hbNCn {
+.folder-2w6LX1 {
   background-color: var(--folder-background-color);
 }
 
