--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -360,6 +360,7 @@
 /* Context menu */
 .menu-3sdvDG {
   background: var(--context-menu-transparency);
+  backdrop-filter: blur(5px);
 }
 
 /* Add Server / Discovery */
