Update class name

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -363,7 +363,7 @@
 }
 
 /* Add Server / Discovery */
-.circleIconButton-1QV--U {
+.circleIconButton-hZmpE8 {
   color: var(--add-discover-icon-color);
   background-color: var(--add-discover-icon-transparency);
 }
