Fix category color

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -401,6 +401,9 @@
 }
 
 /* Channel category color */
+.name-3BUDLf.container-q97qHp .overflow-1wOqNV {
+  color: var(--main-theme-color);
+}
 .wrapper-1S43wv {
   color: var(--main-theme-color);
 }
