more small fixes

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -907,3 +907,13 @@ html {
 .wrapper-3HVHpV {
   background-color: transparent;
 }
+
+.avatar-3QF_VA {
+  border: 8px solid transparent;
+  background-color: transparent;
+}
+
+.footer-3naVBw {
+  background-color: var(--small-user-popout-background-transparency);
+  margin-top: 0px;
+}
