--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -917,3 +917,7 @@ html {
   background-color: var(--small-user-popout-background-transparency);
   margin-top: 0px;
 }
+
+.container-3XgAHv {
+  background: transparent;
+}
