add discover icons

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -362,7 +362,7 @@
   background: var(--context-menu-transparency);
 }
 
-.circleIconButton-1QV--U {
+.circleIconButton-1VxDrg {
   color: var(--add-discover-icon-color);
   background-color: var(--add-discover-icon-transparency);
 }
