transparent edit role header

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -931,6 +931,6 @@ html {
   margin-top: 0px;
 }
 
-.container-3XgAHv {
+.container-3XgAHv, .contentWidth-3aWel5 .header-JUTO-g {
   background: transparent;
 }
