--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -489,6 +489,27 @@
   color: hsla(0, 0%, 100%, 0.8);
 }
 
+/* New small user popout */
+
+.userPopout-3fydSP {
+  background-position: var(--small-user-popout-background-image-position);
+  background-image: var(--small-user-popout-background-image);
+}
+
+.userPopoutInnerWithBanner-wsoegj, .userPopoutInnerNonPremium-3zrFkp {
+  background: var(--small-user-popout-background-transparency);
+}
+
+/* For the background of the content, using darker color from message transparency variable */
+.overlayBackground-arbZMT {
+  background-color: var(--message-box-transparency);
+}
+
+/* For the background of the badges, same as above */
+.profileBadges-31rDHI {
+  background-color: var(--message-box-transparency);
+}
+
 /* Add note */
 .textarea-_59yqs:focus {
   background-color: rgba(0, 0, 0, 0.4);
