Add support for new profile popout (#197)
* feat(User Popout): add support for new class

* feat(User Profile Settings): add support for new class

* Push built CSS

Co-authored-by: Chris Bockover <cbock1337@gmail.com>

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -489,6 +489,36 @@
   color: hsla(0, 0%, 100%, 0.8);
 }
 
+/* New small user popout */
+
+.userPopout-3fydSP {
+  background-position: var(--small-user-popout-background-image-position);
+  background-image: var(--small-user-popout-background-image);
+}
+
+.userPopoutInnerWithBanner-wsoegj, .userPopoutInnerNonPremium-3zrFkp {
+  background: var(--small-user-popout-background-transparency);
+}
+
+/* For the background of the content, using darker color from message transparency variable */
+.overlayBackground-arbZMT {
+  background-color: var(--message-box-transparency);
+}
+
+/* For the background of the badges, same as above */
+.profileBadges-31rDHI {
+  background-color: var(--message-box-transparency);
+}
+
+/* For the background of the whole preview in user profile settings */
+.profileCustomizationPreview-2-Y173 {
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.overlayBackground-H1K9ZY, .profileBadges-1GBCVy {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
 /* Add note */
 .textarea-_59yqs:focus {
   background-color: rgba(0, 0, 0, 0.4);
