--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -1028,7 +1028,6 @@ html {
   margin-bottom: -3px;
 }
 
-#uid_12484,
-#uid_12489 {
+.bannerSVGWrapper-qc0szY mask:first-child {
   display: none;
 }
