Hotfix for member list transparency

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -1097,3 +1097,8 @@ html {
   backdrop-filter: blur(5px);
   border: 0;
 }
+
+.member-48YF_l,
+.members-3WRCEx {
+  background-color: transparent;
+}
