--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -1130,3 +1130,8 @@ html {
 .scroller-WSmht3 {
   background: none !important;
 }
+
+.theme-dark .panel-2ZFCRb {
+  background: none !important;
+  background-color: transparent;
+}
