--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -13,7 +13,7 @@
 }
 
 .tutorialContainer-2sGCg9
-  .wrapper-28eC3z
+  .wrapper-2PSQCG
   .childWrapper-1j_1ub
   .homeIcon-FuNwkv {
   visibility: hidden;
@@ -416,11 +416,11 @@
 }
 
 /* Info Modal */
-.theme-dark .root-g14mjS {
+.theme-dark .root-1CAIjD {
   box-shadow: none;
 }
 
-.theme-dark .footer-31IekZ {
+.theme-dark .footer-1KGV6y {
   background-color: transparent;
   box-shadow: none;
 }
@@ -923,7 +923,7 @@ html {
 }
 
 .tutorialContainer-1pL9QS
-  .wrapper-28eC3z
+  .wrapper-2PSQCG
   .childWrapper-1j_1ub
   .homeIcon-FuNwkv {
   visibility: hidden;
