Fix home icon image applying to other elements

--- a/css/v3/naat.v3.css
+++ b/css/v3/naat.v3.css
@@ -915,7 +915,7 @@ html {
   background-color: var(--emoji-menu-background-color);
 }
 
-.childWrapper-1j_1ub {
+.tutorialContainer-1pL9QS .childWrapper-1j_1ub {
   background: var(--home-icon-image) !important;
   background-position: var(--home-icon-image-position) !important;
   background-repeat: no-repeat !important;
